tests/compile-fail/tracked_struct_not_update.stderr
error[E0599]: the function or associated item `maybe_update` exists for struct `salsa::plumbing::UpdateDispatch<NotUpdate>`, but its trait bounds were not satisfied
 --> tests/compile-fail/tracked_struct_not_update.rs:1:1
  |
1 | #[salsa::tracked]
  | ^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `salsa::plumbing::UpdateDispatch<NotUpdate>` due to unsatisfied trait bounds
...
7 | struct NotUpdate;
  | ---------------- doesn't satisfy `NotUpdate: PartialEq` or `NotUpdate: Update`
  |
 ::: src/update.rs
  |
  |     pub struct Dispatch<D>(PhantomData<D>);
  |     ---------------------- doesn't satisfy `_: UpdateFallback<NotUpdate>`
  |
note: if you're trying to build a new `salsa::plumbing::UpdateDispatch<NotUpdate>`, consider using `salsa::plumbing::UpdateDispatch::<D>::new` which returns `salsa::plumbing::UpdateDispatch<_>`
 --> src/update.rs
  |
  |         pub fn new() -> Self {
  |         ^^^^^^^^^^^^^^^^^^^^
  = note: the following trait bounds were not satisfied:
          `NotUpdate: Update`
          `NotUpdate: PartialEq`
          which is required by `salsa::plumbing::UpdateDispatch<NotUpdate>: salsa::plumbing::UpdateFallback<NotUpdate>`
note: the trait `Update` must be implemented
 --> src/update.rs
  |
  | pub unsafe trait Update {
  | ^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NotUpdate` with `#[derive(PartialEq)]`
  |
7 + #[derive(PartialEq)]
8 | struct NotUpdate;
  |
